--- a/app/src/main/res/layout/activity_class.xml
+++ b/app/src/main/res/layout/activity_class.xml
@@ -221,6 +221,6 @@
         android:layout_below="@id/text3"
         android:gravity="center"
         android:layout_centerHorizontal="true"
-        tools:listitem="@layout/video_resource_card"/>
+        tools:listitem="@layout/resource_card"/>
 
 </RelativeLayout>
