--- a/app/src/main/res/layout/resource_card.xml
+++ b/app/src/main/res/layout/resource_card.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="180dp"
+    android:elevation="4dp"
+    app:cardCornerRadius="8dp"
+    android:layout_margin="10dp">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:maxHeight="200dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
-    android:id="@+id/container"
-    android:layout_margin="10dp">
+    android:id="@+id/container">
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/video_player"
         android:layout_width="match_parent"
@@ -15,11 +21,7 @@
         app:show_buffering="when_playing"
         app:resize_mode="fill"
         android:visibility="gone"/>
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:elevation="4dp"
-        app:cardCornerRadius="8dp">
+
         <FrameLayout
             android:id="@+id/doc_anchor"
             android:layout_width="match_parent"
@@ -45,7 +47,6 @@
                 android:drawablePadding="10dp"
                 app:drawableStartCompat="@drawable/icon_doc" />
         </FrameLayout>
-    </androidx.cardview.widget.CardView>
 
     <ImageView
         android:layout_width="match_parent"
@@ -55,3 +56,5 @@
         tools:ignore="ContentDescription"
         android:visibility="gone"/>
 </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
